# xaler-app

./: .gitignore  Makefile  docker-compose.yaml  pyproject.toml
_configs/app/: Dockerfile
src/: manage.py  run.sh
src/_project/: api_urls.py  asgi.py  urls.py  wsgi.py
src/_project/settings/: __init__.py  core_settings.py  local_settings.tmpl  logger_settings.py
src/core/management/commands/: initialize.py
src/users/management/commands/: create_default_groups.py  create_super_user.py
src/users/migrations/: 0001_initial.py  0002_alter_user_mid_name.py
src/users/models/: __init__.py  user_model.py
src/users/serializers/: __init__.py  users_serializers.py
src/users/urls/: auth_urls.py  users_urls.py
src/users/views/: __init__.py  auth_view.py  users_view.py
src/utils/: images.py  uploaders.py
src/utils/api/: views.py
